<resources>
    <string name="app_name">Tele-Visão</string>

    <!-- String LoginActivity -->
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>

    <string name="nome_usuario">Usuário</string>
    <string name="perfil_usuario">Perfil</string>
    <string name="email_usuario">seu_email@provedor.com</string>

    <string name="botao_entrar">Entrar</string>
    <string name="sucesso_login">Entrando...</string>
    <string name="erro_login">Usuário e/ou Senha inválidos!</string>
    <string name="erro_vazio">Campos em branco.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="action_solicita_atendimento">Solicitar Atendimento</string>
    <string name="action_about">Sobre</string>
    <string name="action_logoff">Sair</string>
    <string name="action_history">Histórico</string>
    <string name="action_camera">Abrir câmera</string>
    <string name="action_password">Alterar Senha</string>

    <string name="tabbed_atend">Atendimentos</string>
    <string name="tabbed_user">Usuários</string>

    <string name="solicAt_nomePac">Nome do Paciente</string>
    <string name="solicAt_idPront">Nº Prontuário do Paciente</string>
    <string name="solicAt_Solic">Solicitante</string>
    <string name="solicAt_hospital">Hospital</string>
    <string name="solicAt_andar">Andar</string>
    <string name="solicAt_leito">Leito</string>
    <string name="solicAt_descricao">Resumo/História - Clínica</string>

    <!--solicitar atendimento -->
    <string name="hint_nomePac">Digite o nome do paciente</string>
    <string name="hint_idPront">Digite o nº do prontuário do paciente</string>
    <string name="hint_NProntPac">Digite o número do prontuário do paciente</string>
    <string name="hint_andar">Digite o andar do paciente</string>
    <string name="hint_leito">Digite o leito do paciente</string>
    <string name="hint_descricao">Digite a Resumo/História - Clínica do paciente</string>
    <string name="hint_novaSenha">Digite uma nova Senha</string>


    <string name="section_format">AGORA VAI: %1$d</string>
    <string name="botao_iniciar">Iniciar Atendimento</string>
    <string name="atend_user_solic">Usuário Solicitante</string>
    <string name="atend_nome_pac">Nome do Paciente</string>
    <string name="atend_hospital">Hospital</string>
    <string name="atend_hospital_andar">Andar</string>
    <string name="atend_hospital_leito">Leito</string>
    <string name="atend_resumo">Resumo/História - Clínica</string>
    <string name="disponivel">Paciente Disponível para Atendimento</string>
    <string name="inicio_atend">Atendimento</string>
    <string name="olhoEsquerdo">Olho Esquerdo</string>
    <string name="olhoDireito">Olho Direito</string>
    <string name="anexar_imagem">Anexar Imagem</string>
    <string name="capturar_imagem">Capturar Imagem</string>
    <string name="atend_hda">HDA</string>
    <string name="conduta_atend">Conduta</string>
    <string name="parecer_atend">Parecer</string>
    <string name="action_finaliza_atendimento">Finalizar Atendimento</string>
    <string name="hint_search">Procurar</string>
    <string name="concluido">Atendimento Concluído por...</string>
    <string name="registro_hda">Aqui vai o texto do HDA</string>
    <string name="user_atend">Usuário Atendente</string>
    <string name="atend_perfil">Perfil Solicitante</string>
    <string name="atend_conduta">Conduta</string>
    <string name="atend_parecer">Parecer</string>


</resources>
