<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_solicita_atendimento"
            android:icon="@drawable/ic_solicita_atendimento"
            android:title="@string/action_solicita_atendimento" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/ic_history"
            android:title="@string/action_history" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_camera" />
        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/ic_security"
            android:title="@string/action_password" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_help"
                android:title="@string/action_about" />
            <item
                android:id="@+id/nav_logoff"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/action_logoff" />
        </menu>
    </item>

</menu>
