<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ufcspa.giovanib.televisao.controle.SolicitaAtendimentoActivity">

    <!--<include-->
        <!--layout="@layout/app_bar_solicita_atendimento"-->
        <!--android:layout_width="409dp"-->
        <!--android:layout_height="113dp" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/solicAt_nomePac" />

            <requestFocus android:layout_width="match_parent" />

            <EditText
                android:id="@+id/solicNomePac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/hint_nomePac"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/solicAt_idPront" />

            <EditText
                android:id="@+id/solicIdPront"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/hint_idPront"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/solicAt_hospital" />

            <Spinner
                android:id="@+id/solicHospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:isScrollContainer="true"
                android:spinnerMode="dropdown"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/solicAt_andar" />

            <EditText
                android:id="@+id/solicAndar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/hint_andar"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/solicAt_leito" />

            <EditText
                android:id="@+id/solicLeito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/hint_leito"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/solicAt_descricao" />

            <EditText
                android:id="@+id/solicDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:isScrollContainer="true"
                android:hint="@string/hint_descricao"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/buttonSolicitaAtend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:onClick="inserirOnClick"
                android:text="@string/action_solicita_atendimento" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
