<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="br.edu.ufcspa.giovanib.televisao.controle.VisualizaAtendimentoActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_atend_disp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/disponivel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/atend_user_solic"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/atend_nome_pac"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:text="@string/atend_hospital"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_margin="2dp"
                android:text="@string/atend_hospital_andar"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_margin="2dp"
                android:text="@string/atend_hospital_leito"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="15sp"
                android:isScrollContainer="true"
                android:layout_margin="10dp"
                android:text="@string/atend_resumo"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:onClick="iniciarOnClick"
                android:background="@color/colorPrimary"
                android:text="@string/botao_iniciar"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
