<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="br.edu.ufcspa.giovanib.televisao.controle.VisualizaAtendimentoActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/atend_user_solic"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/atend_nome_pac"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:text="@string/atend_hospital"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_margin="2dp"
                android:text="@string/atend_hospital_andar"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_margin="2dp"
                android:text="@string/atend_hospital_leito"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="15sp"
                android:isScrollContainer="true"
                android:layout_margin="10dp"
                android:text="@string/atend_resumo"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/concluido" />

            <TextView
                android:id="@+id/hist_user_atend"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/user_atend"
                android:layout_height="wrap_content" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"  android:stretchColumns="*">


                <!-- Linha 2 com duas colunas -->
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal">

                    <LinearLayout
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:id="@+id/tx_olhoEsquerdo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:text="@string/olhoEsquerdo" />

                        <ImageView
                            android:id="@+id/img_olhoEsquero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@mipmap/ic_logo" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:id="@+id/tx_olhoDireito"
                            android:layout_width="match_parent"
                            android:textAlignment="center"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/olhoDireito" />

                        <ImageView
                            android:id="@+id/img_olhoDireito"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@mipmap/ic_logo" />

                    </LinearLayout>

                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:text="@string/atend_hda" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:isScrollContainer="true"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:text="1) XXX, 65 a , DM, CMV, TX , RENAL. Refere perda progressiva da visão com piora súbita há 1 dia.
                Refere dor OD há 1 dia. Nega  episódio de trauma, etc" />
                // descomentar quando for o real
                <!--android:text="@string/registro_hda" />-->

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
