<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/lista_hist_imagem"
        android:layout_width="100dp"
        android:src="@mipmap/ic_atend_concluido"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/lista_hist_nomePac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solicAt_nomePac"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/lista_hist_hospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solicAt_hospital"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/lista_hist_responsavel_atend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_atend"
            android:textSize="20dp" />

    </LinearLayout>

</LinearLayout>