<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/lista_user_status"
        android:layout_width="100dp"
        android:src="@drawable/ic_user_offline"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/lista_user_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/lista_user_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfil_usuario"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/lista_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_usuario"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>

