<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ufcspa.giovanib.televisao.LoginActivity">

    <ImageView
        android:layout_marginBottom="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo256"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/usuario"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/usuario"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <requestFocus/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/senha"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/senha"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:onClick="entrarOnClick"
        android:text="@string/botao_entrar"
        android:layout_height="wrap_content" />

</LinearLayout>
